   that of SRC:

 - After loading the compiler, the COMMON-LISP package was left unlocked
   against changes.

 - ECL can build again itself using a C++ compiler (--with-cxx thus works).

 - ecl_make_file_stream_from_fd() did not set the right mode in the stream
   structure.

 - ECL did not understand type declarations that involved symbol macros.

* Visible changes:

 - The source location annotator records the original pathnames, not the
   truenames. This allows in particular moving ECL's core files.

 - The signal servicing thread now carries the name SI:SIGNAL-SERVICING, which
   is different from the name of the threads that are created to actually
   handle those signals.

 - FFI:CLINES admits @lisp-object notation in the strings.

 - ECL's contributed modules can now be used in standalone programs, for they   
   are now stored both in FASL form and as statically linked libraries.

 - ASDF:MAKE-BUILD now takes a new keyword argument, :MOVE-HERE, that allows
   moving the files that ASDF creates to the current directory. :MOVE-HERE can
   be a flag, in which case the files are output at ./asdf-output/ or a
   pathname designator, in which case the directories are created.

 - Gray streams implement a new generic function, GRAY:STREAM-FILE-DESCRIPTOR
   which is used by SERVE-EVENT to gather the system identifier which is used
   to wait on input from the device.

 - ASDF:MAKE-BUILD admits a new type, :BINARY, which creates a standalone
   system (*.asd) accompanied by two binary files, statically linked library
   (.a or .lib), and a FASL (*.fasb). This can be used, to replace existing
   systems with precompiled ones.

 - ECL restores the habit of installing manual pages for ecl and ecl-config.

 - We have removed the obsolete versions of the documentation files. The
   up to date documentation now lives in a separate source repository,
   as explained in http://ecls.sourceforge.net/download.html
